[project]
name = "os-cordon"
version = "0.1.0"
description = "OSCordon - A Python package for working with USRN & Road Link geometries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.3",
    "requests==2.32.5",
    "shapely==2.1.1",
    "geopandas==1.1.1",
    "lonboard==0.12.1",
    "pyarrow==21.0.0",
    "aiohttp>=3.12.15",
]

[project.optional-dependencies]
dev = [
    "ruff==0.13.1",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
